second/configs/00-namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    name: traefik
---
apiVersion: v1
kind: Namespace
metadata:
  name: gearforce
  labels:
    name: gearforce
---
apiVersion: v1
kind: Namespace
metadata:
  name: playtest
  labels:
    name: playtest
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    name: storage
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
