second/configs/04-cors-middleware-gs.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware-gs
  namespace: storage
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "POST"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "*"
      - "localhost/*"
      - "https://localhost/"
      - "https://gf.metadiversions.com/"
      - "https://gearforce.app"
      - "https://gearforce.metadiversions.com/"
    accessControlMaxAge: 100
    addVaryHeader: true
