second/configs/04-redirect-scheme-gearforce.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: gearforce
spec:
  redirectScheme:
    scheme: https
    permanent: true
