second/configs/04-redirect-scheme-playtest.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: playtest
spec:
  redirectScheme:
    scheme: https
    permanent: true
