second/configs/04-redirect-scheme-storage.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: storage
spec:
  redirectScheme:
    scheme: https
    permanent: true
