second/configs/06-gs-ingressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: storage
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`gs.metadiversions.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gs1-gamestorage
      port: http
    middlewares:
      - name: redirectscheme

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: storage
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gs.metadiversions.com`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: gs1-gamestorage
      port: http
  tls:
    certResolver: letsencrypt
    domains:
      - main: gs.metadiversions.com
